--- a/bivouac-web/src/app/menu/menu.component.scss
+++ b/bivouac-web/src/app/menu/menu.component.scss
@@ -4,7 +4,7 @@
   right: 0%;
   top: 0%;
   position: absolute;
-  z-index: 2;
+  z-index: 100;
   background-color: colors.$secondary;
   height: 100vh;
   width: 40%;
