--- a/bivouac-web/src/styles.scss
+++ b/bivouac-web/src/styles.scss
@@ -106,10 +106,3 @@ a {
   color: colors.$primary;
 }
 
-.mb{
-    margin-bottom: 16px;
-}
-
-.m{
-    margin: 20px;
-}
